# mmtui

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: release-please-config.json
.github/workflows/: build.yml
src/: config.rs  drives.rs  main.rs  mountpoints.rs  tui.rs
